<resources>
    <string name="app_name">ShoeStore</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account_login">Login with an existing account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!!</string>
    <string name="resume">This is a shoe store, you are surprised at what to find</string>
    <string name="start">Start</string>
    <string name="instructions">- Instruction one \n\n-Instruction two\n\n-Instruction three</string>
    <string name="view_list">View Shoes</string>
    <string name="shoe_title">Shoes</string>
    <string name="logout">Logout</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
