<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <LinearLayout
        android:id="@+id/shoe_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/name_label"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:labelFor="@id/name_edit"
            android:text="@string/shoe_name"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/name_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.name}"/>

        <TextView
            android:id="@+id/size_label"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:labelFor="@id/size_edit"
            android:text="@string/shoe_size"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/size_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@={shoe.sizeToString}"/>

        <TextView
            android:id="@+id/company_label"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:labelFor="@id/company_edit"
            android:text="@string/shoe_company"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/company_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.company}"/>

        <TextView
            android:id="@+id/description_label"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:labelFor="@id/description_edit"
            android:text="@string/shoe_description"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/description_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="2"
            android:text="@={shoe.description}"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/NameStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:layout_gravity="center_horizontal"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"

                android:fontFamily="@font/roboto"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</layout>